# vertical-slices

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: conf.py  database.py  main.py
app/features/: router.py
app/features/cat/: router.py
app/features/cat/create/: create.py  handler.py  models.py  use_case.py
app/server/: server.py
migrations/: sqitch.plan
migrations/deploy/: 20230217_add_cat_table.sql
migrations/revert/: 20230217_add_cat_table.sql
migrations/verify/: 20230217_add_cat_table.sql
