[tool.poetry]
name = "vertical-slices"
version = "0.1.0"
description = ""
authors = ["Oliviero Dotti <oliviero_dotti@casavo.com>"]
readme = "README.md"
# packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
alembic = "^1.9.4"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
